# ride-park_api_backend

./: .gitignore  READEM.md  README.md  architecture.drawio  create_parkinglot.py  create_station_geocoord.py  create_station_location.py  main_fastapi.py  plot_map.py  pyproject.toml  read_carpark_api.py  scrape_park.py
app/: conftest.py  main.py  stationinfo.py
app/routers/: stations.py
app/test/: test_main.py
data_backend/: create_parkinglot.py  create_station_geocoord.py  create_station_list.py  create_station_location.py  read_carpark_api.py
map/: station_map.html
other/: cal_geo_distance.py  plot_map.py  scrape_parking_info.py
test/: test_read_carpark_api.py  test_stations.py
